--- a/silent-genes-gencode/pom.xml
+++ b/silent-genes-gencode/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>silent-genes-model</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
