--- a/silent-genes-cli/pom.xml
+++ b/silent-genes-cli/pom.xml
@@ -17,7 +17,7 @@
         </dependency>
         <dependency>
             <groupId>org.monarchinitiative.sgenes</groupId>
-            <artifactId>silent-genes-gencode</artifactId>
+            <artifactId>silent-genes-gtf</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
