--- a/silent-genes-cli/pom.xml
+++ b/silent-genes-cli/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>picocli</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
