--- a/silent-genes-simple/pom.xml
+++ b/silent-genes-simple/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>SilentGenes</artifactId>
         <groupId>org.monarchinitiative.sgenes</groupId>
-        <version>0.2.1-SNAPSHOT</version>
+        <version>0.2.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
